# rust-sdk

./: .gitignore  BUILD.bazel  Cargo.toml  README.md
.github/workflows/: publish.yml
examples/: relay_smoke.rs
src/: client.rs  data.rs  ffi.rs  games.rs  lib.rs  method_id.rs  moqt.rs  robotics.rs  streams.rs  voice.rs
tests/: client_test.rs
