[package]
name = "clutchcall-sdk"
version = "1.0.0"
edition = "2021"

[dependencies]
libloading = "0.8"
tokio = { version = "1.36", features = ["full"] }
quinn = "0.10"
uuid = { version = "1.8", features = ["v4"] }
# Streams modality control plane (tRPC over HTTPS). ureq is small + sync,
# stays out of the runtime story. serde brings (de)serialize derive for the
# modality DTOs across the board.
ureq = { version = "2.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.3"
